<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">



    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        android:backgroundTint="@color/white">


        <TextView
            android:id="@+id/LOG_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/L"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/mail_data"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sf_regular"
            android:layout_marginTop="60dp"
            android:importantForAutofill="auto"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/M"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/pass_data"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/sf_regular"
            android:importantForAutofill="auto"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/P"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/Login_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="220dp"
            android:background="@color/black"
            android:text="@string/L"
            android:fontFamily="@font/sf_regular"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/SU_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="220dp"
            android:background="@color/black"
            android:text="@string/S"
            android:fontFamily="@font/sf_regular"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView

            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="180dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_regular"
            android:minHeight="30dp"
            android:onClick="SignupFunc"
            android:text="@string/F"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>